  - [drawgantt-svg] add a mark next to the label of the resources pointed by
    the mouse
  - [drawgantt-svg] fix possible SQL injection with the filters
  - [drawgantt-svg] improve the label_display_regex text replacement mechanism
  - [drawgantt-svg/oarstat] fix past and current moldable jobs display
  - [drawgantt-svg] fix drain display
  - [oar.conf] update SSH options to the one of OpenSSH 7.6p1
  - [oar-database] support --db-is-local (UNIX socket) for MySQL (MariaDB)
  - [oar-node] fix warnings with OAR's sshd configuration
  - [oar-resource-add] fix the auto-offset option
  - [oar-resource-add] add support for creating GPU resources
  - [oar-resource-add] add support to handle the CPU and GPU topologies

version 2.5.7:
--------------

This version mainly brings a security fix for the oarsh command. It is highly
recommended to upgrade (server, frontend(s) and nodes), since all previous
versions of OAR are affected. 

  - [oarsh] fix a security hole when passing option to OpenSSH. See oar.conf to
    adapt settings to your setup, if required (OARSH_* variables)
  - [oarsh] dropped the mechanism to select whether to use oarsh or fall back 
    to ssh, given a list of hostname patterns
  - [oarsub] fix the job-key information of the manual page
  - [oarsub] handle cases where trailing spaces were breaking oarsub script directives
  - [api] added an example of Apache configuration for the authentication 
  - [documentation] improve the SSH keys setup explanations for OAR installation

version 2.5.6:
--------------

  - [oar.conf] add the SCHEDULER_MIN_TIME_BETWEEN_2_CALLS option
  - [metascheduler] fix a bug with advance reservations when predicted resources
         must be recomputed
  - [metascheduler] fix a bug with advance reservations with standby start job
         types (noop/cosystem/deploy=standby)
  - [oar-node init] create /var/run/sshd if needed
  - [oarsub] fix several bugs with the array job submission