@@ -82,7 +82,8 @@ if (is_readable(CONFIG_FILE)) {
 }
 
 $resource_base = array_key_exists('resource_base',$_GET)?$_GET['resource_base']:$CONF['default_resource_base'];
-$filter = array_key_exists('filter',$_GET)?$_GET['filter']:reset($CONF['nav_filters']);
+$filter = array_key_exists('filter',$_GET)?$_GET['filter']:reset(array_keys($CONF['nav_filters']));
+$filterSQL=$CONF['nav_filters'][$filter];
 $timezone = array_key_exists('timezone',$_GET)?$_GET['timezone']:reset($CONF['nav_timezones']);
 $relative_start = array_key_exists('relative_start',$_GET)?$_GET['relative_start']:$CONF['default_relative_start'];
 $relative_stop = array_key_exists('relative_stop',$_GET)?$_GET['relative_stop']:$CONF['default_relative_stop'];
@@ -197,7 +198,7 @@ $output = <<<EOT
   var zoom_start = 0;
   var zoom_stop = 0;
   var filter = "$filter";
-  var filterSQL = "";
+  var filterSQL = "$filterSQL";
   var timezone = "$timezone";
   var baseResource = "$resource_base";
   var scale = "$scale";
